fixed sidebar flowing off screen

--- a/_sass/pages/_wiki.scss
+++ b/_sass/pages/_wiki.scss
@@ -7,10 +7,16 @@
         max-height: 2rem * $line-height-base;
         overflow: hidden;
     }
+    max-height: 75vh;
+    min-height: 300px;
 }
 
 #wiki-list {
     //max-height: 35vh;
+    @include media-query($above: $screen-large-min) {
+        max-height: 66vh;
+    }
+
     @include media-query($above: $screen-medium-min, $below: $screen-medium) {
         max-height: 44vh;
     }
